--- a/.env
+++ b/.env
@@ -5,3 +5,12 @@ API_TOKEN_SALT=QpZm825kaKSO4DbL2FoQgw==
 ADMIN_JWT_SECRET=z42cMGezH9RFQ8yjB8Hx7g==
 JWT_SECRET=jqdeioM61lyaWAfAFgBcOQ==
 WEBSITE=http://127.0.0.1:1337/
+
+# @strapi-community/dockerize variables 
+
+DATABASE_HOST=127.0.0.1
+DATABASE_PORT=3306
+DATABASE_NAME=strapi
+DATABASE_USERNAME=root
+NODE_ENV=development
+DATABASE_CLIENT=mysql
