--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@_sh/strapi-plugin-ckeditor": "^1.1.2",
+    "@strapi/plugin-documentation": "^4.3.8",
     "@strapi/plugin-i18n": "4.3.8",
     "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/strapi": "4.3.8",
-    "better-sqlite3": "7.4.6"
+    "better-sqlite3": "7.4.6",
+    "mysql": "^2.18.1"
   },
   "author": {
     "name": "A Strapi developer"
