FTP Plugin and demo content.

--- a/.env
+++ b/.env
@@ -14,3 +14,10 @@ DATABASE_NAME=strapi
 DATABASE_USERNAME=root
 NODE_ENV=development
 DATABASE_CLIENT=mysql
+
+FTP_HOST=64.27.16.168
+FTP_PORT=21
+FTP_USER=rexwu
+FTP_PASSWORD=iBuy11235811
+FTP_BASEPATH=/IBuyPower.Content/Images/Test/
+FTP_BASEURL=https://content.ibuypower.com/Images/Test/
