--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@strapi/plugin-users-permissions": "4.3.8",
     "@strapi/strapi": "4.3.8",
     "better-sqlite3": "7.4.6",
-    "mysql": "^2.18.1"
+    "mysql": "^2.18.1",
+    "strapi-provider-upload-ftp-v2": "^1.1.2"
   },
   "author": {
     "name": "A Strapi developer"
